@@ -26,7 +26,7 @@
     <parent>
       <groupId>org.jboss</groupId>
       <artifactId>jboss-parent</artifactId>
-      <version>23</version>
+      <version>24</version>
     </parent>
 
     <groupId>org.wildfly.core</groupId>
@@ -1697,10 +1697,10 @@
             <properties>
                 <modular.jdk.args>
                     --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --permit-illegal-access
+                    --illegal-access=permit
                 </modular.jdk.args>
                 <!-- [WFCORE-1494] remove JUL workaround -->
-                <modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true -Djdk.attach.allowAttachSelf=true</modular.jdk.props>
+                <modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Djdk.attach.allowAttachSelf=true</modular.jdk.props>
                 <version.org.jboss.byteman>4.0.0-BETA5</version.org.jboss.byteman>
                 <version.org.jboss.logging.jboss-logging-tools>2.1.0.Alpha2</version.org.jboss.logging.jboss-logging-tools>
             </properties>
